--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   },
   "dependencies": {
     "@ai-sdk/openai": "^0.0.60",
+    "@ai-sdk/perplexity": "^1.1.9",
     "@clerk/nextjs": "^5.4.1",
     "@formkit/auto-animate": "^0.8.2",
     "@heroicons/react": "^2.1.5",
@@ -63,8 +64,7 @@
     "@types/turndown": "^5.0.5",
     "@vercel/functions": "^1.4.1",
     "@xenova/transformers": "^2.17.2",
-    "ai": "^3.3.37",
-    "axios": "^1.7.7",
+    "ai": "^3.4.33",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "cmdk": "1.0.0",
@@ -116,6 +116,8 @@
     "@types/react-dom": "^18.3.0",
     "@typescript-eslint/eslint-plugin": "^8.1.0",
     "@typescript-eslint/parser": "^8.1.0",
+    "axios": "^1.10.0",
+    "dotenv": "^16.5.0",
     "eslint": "^8.57.0",
     "eslint-config-next": "^14.2.4",
     "postcss": "^8.4.39",
