--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@heroicons/react": "^2.1.5",
     "@hookform/resolvers": "^3.9.0",
     "@lucia-auth/adapter-prisma": "^4.0.1",
+    "@mendable/firecrawl-js": "^1.26.0",
     "@orama/orama": "^2.1.1",
     "@orama/plugin-data-persistence": "^2.1.1",
     "@orama/plugin-match-highlight": "^2.1.1",
